--- a/FakeNewsClassifier.ipynb
+++ b/FakeNewsClassifier.ipynb
@@ -6,8 +6,8 @@
       "name": "FakeNewsClassifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1rmJC7QzAocTgImrFsGjKwUe8HGX7EtuE",
-      "authorship_tag": "ABX9TyMy3k5A4VWQKZqjEdpB37TO",
+      "mount_file_id": "https://github.com/M-Borsuk/FakeNewsClassifier/blob/main/FakeNewsClassifier.ipynb",
+      "authorship_tag": "ABX9TyMqeKP2U0trlQarxBrMqEak",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c22d8082-9e8a-40f9-c5c2-c3097ad3299a"
+        "outputId": "cc7e8296-3289-4228-c11d-e9b8b3562a15"
       },
       "source": [
         "import pandas as pd\n",
@@ -60,7 +60,7 @@
         "nltk.download('stopwords')\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": 166,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +84,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 166
+          "execution_count": 25
         }
       ]
     },
@@ -98,7 +98,7 @@
         "\n",
         "df_test = pd.read_csv(\"/content/drive/My Drive/NLPFakeNews/test.csv\")"
       ],
-      "execution_count": 167,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -109,12 +109,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "3770a18c-f835-48b5-df03-6a89f2dd6136"
+        "outputId": "1fea8012-d527-4ba2-88ea-7d5a2f4843be"
       },
       "source": [
         "df_train.head()"
       ],
-      "execution_count": 168,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 168
+          "execution_count": 27
         }
       ]
     },
@@ -216,12 +216,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "d395e01e-c5ad-409b-ccbf-ce39775f8f7f"
+        "outputId": "455104e9-c81b-4a50-f523-88a4e5467426"
       },
       "source": [
         "df_test.head()"
       ],
-      "execution_count": 169,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,7 +305,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 169
+          "execution_count": 28
         }
       ]
     },
@@ -316,12 +316,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2618c967-5beb-4bbc-ec1e-0459d6afb0c5"
+        "outputId": "4483aec4-0d11-4dac-b676-143c87f1b691"
       },
       "source": [
         "df_test.shape"
       ],
-      "execution_count": 170,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +333,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 170
+          "execution_count": 29
         }
       ]
     },
@@ -344,12 +344,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ExVGGDtWQPxx",
-        "outputId": "d72f4235-fac5-4a21-a519-a58909e97bc7"
+        "outputId": "3e5cbd5c-72c6-44ad-83b2-13e5c74acb2a"
       },
       "source": [
         "df_train.shape"
       ],
-      "execution_count": 171,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +361,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 171
+          "execution_count": 30
         }
       ]
     },
@@ -372,12 +372,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "104feade-4b7d-47dd-e10b-6b47a64e833a"
+        "outputId": "956f6dca-6e39-4967-a91e-d9db488dd0c1"
       },
       "source": [
         "df_train.info()"
       ],
-      "execution_count": 172,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,12 +406,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JVlcX5JaQUME",
-        "outputId": "e001b9a3-7f34-49da-b582-934f455c681a"
+        "outputId": "8a144383-d2e9-4196-8f85-0efe925954df"
       },
       "source": [
         "df_test.info()"
       ],
-      "execution_count": 173,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,12 +440,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 120
         },
-        "outputId": "9cc3822f-5f89-4e9a-a0ea-e70801e9a91d"
+        "outputId": "6f320448-41f3-4e42-d674-edf6b862f1f9"
       },
       "source": [
         "df_train.text[0]"
       ],
-      "execution_count": 174,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 174
+          "execution_count": 33
         }
       ]
     },
@@ -472,12 +472,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "ecd5259e-a20b-4858-cf7a-ef2e98468046"
+        "outputId": "e69d3f4e-f14d-4497-fd60-20d7f0bf064d"
       },
       "source": [
         "df_train[df_train[\"text\"].isna()]"
       ],
-      "execution_count": 175,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,7 +873,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 175
+          "execution_count": 34
         }
       ]
     },
@@ -885,12 +885,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 266
         },
-        "outputId": "c48e6233-de25-4162-9649-fe47bdb46b71"
+        "outputId": "1d9084d9-296d-4db4-8d84-4b644beafbd0"
       },
       "source": [
         "df_test[df_test[\"text\"].isna()]"
       ],
-      "execution_count": 176,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -988,7 +988,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 176
+          "execution_count": 35
         }
       ]
     },
@@ -1001,7 +1001,7 @@
         "df_train = df_train.dropna(subset=[\"text\",\"title\"])\n",
         "df_test = df_test.dropna(subset=[\"text\",\"title\"])\n"
       ],
-      "execution_count": 177,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1011,12 +1011,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I8O669mqRF4B",
-        "outputId": "f5fe5a66-e0c4-4a03-bf5f-4c5766fbbbe1"
+        "outputId": "9e86158b-b0ec-4ab5-f47f-82319a37b89a"
       },
       "source": [
         "df_train[\"label\"].value_counts()"
       ],
-      "execution_count": 178,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1030,7 +1030,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 178
+          "execution_count": 37
         }
       ]
     },
@@ -1042,12 +1042,12 @@
           "height": 204
         },
         "id": "m23KVZHYdObm",
-        "outputId": "511d4b18-552a-4e7d-c1da-1203020a4800"
+        "outputId": "b048ae89-28c2-415a-cc54-51bfd45e948d"
       },
       "source": [
         "df_train.head()"
       ],
-      "execution_count": 179,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1137,7 +1137,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 179
+          "execution_count": 38
         }
       ]
     },
@@ -1148,12 +1148,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oS7ao3cbgg0O",
-        "outputId": "9d152de8-8974-4ea8-e690-2d9e9dc9152c"
+        "outputId": "e8723854-45e4-4985-8ed4-5429bb433485"
       },
       "source": [
         "df_train.isna().sum()"
       ],
-      "execution_count": 180,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1170,7 +1170,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 180
+          "execution_count": 39
         }
       ]
     },
@@ -1182,7 +1182,7 @@
       "source": [
         "stop_words = set(stopwords.words(\"english\"))"
       ],
-      "execution_count": 181,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1192,12 +1192,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WtxkrhGVO_j6",
-        "outputId": "8be97012-38d0-454c-f51e-9317e763d4ae"
+        "outputId": "33810482-4561-47b2-8f03-2d7828d5e3d7"
       },
       "source": [
         "stop_words"
       ],
-      "execution_count": 182,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1387,7 +1387,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 182
+          "execution_count": 41
         }
       ]
     },
@@ -1401,18 +1401,18 @@
         "  if lem == True:\r\n",
         "    preprocess = WordNetLemmatizer()\r\n",
         "    txt = txt.apply(lambda x: nltk.sent_tokenize(x))\r\n",
-        "    txt = txt.apply(lambda x: \" \".join([preprocess.lemmatize(w.lower()) for y in x for w in nltk.word_tokenize(y) if w.lower() not in stop_words]))\r\n",
+        "    txt = txt.apply(lambda x: \" \".join([preprocess.lemmatize(w.strip().lower()) for y in x for w in nltk.word_tokenize(y) if w.lower() not in stop_words]))\r\n",
         "    txt = txt.apply(lambda x: re.sub(\"[^a-zA-Z\\s]\",\"\",x))\r\n",
         "    return txt\r\n",
         "  else:\r\n",
         "    preprocess = PorterStemmer()\r\n",
         "    txt = txt.apply(lambda x: nltk.sent_tokenize(x))\r\n",
-        "    txt = txt.apply(lambda x: \" \".join([preprocess.stem(w.lower()) for y in x for w in nltk.word_tokenize(y) if w.lower() not in stop_words]))\r\n",
+        "    txt = txt.apply(lambda x: \" \".join([preprocess.stem(w.strip().lower()) for y in x for w in nltk.word_tokenize(y) if w.lower() not in stop_words]))\r\n",
         "    txt = txt.apply(lambda x: re.sub(\"[^a-zA-Z\\s]\",\"\",x))\r\n",
         "    return txt\r\n",
         "  return -1"
       ],
-      "execution_count": 183,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1426,60 +1426,83 @@
         "df_test[\"text\"]=preprocess_text(df_test[\"text\"],stop_words,lem=True)\r\n",
         "df_test[\"title\"]=preprocess_text(df_test[\"title\"],stop_words,lem=True)"
       ],
-      "execution_count": 184,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KEIPzSfqIe0w"
-      },
-      "source": [
-        "vectorizer = TfidfVectorizer()\r\n",
-        "X_train = vectorizer.fit_transform(df_train[\"text\"])"
-      ],
-      "execution_count": 186,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pmtkcyVOFJRp"
-      },
-      "source": [
-        "X_test = vectorizer.transform(df_test[\"text\"])"
-      ],
-      "execution_count": 187,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
+        "id": "hi9i64N3PgE5",
+        "outputId": "29faaf9d-8d4d-4764-ff5a-c54f486ab952",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "27DxLsh6Je6x",
-        "outputId": "e3c0f37c-f129-4a68-efee-725688f1ccf6"
+          "base_uri": "https://localhost:8080/",
+          "height": 324
+        }
       },
       "source": [
-        "X_test"
+        "df_train[\"text\"][0]"
       ],
-      "execution_count": 188,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
             "text/plain": [
-              "<5071x159207 sparse matrix of type '<class 'numpy.float64'>'\n",
-              "\twith 1330228 stored elements in Compressed Sparse Row format>"
+              "'house dem aide   even see comey  letter jason chaffetz tweeted darrell lucus october    subscribe jason chaffetz stump american fork  utah  image courtesy michael jolley  available creative commonsby license  apology keith olbermann  doubt worst person world weekfbi director james comey  according house democratic aide  look like also know secondworst person well  turn comey sent nowinfamous letter announcing fbi looking email may related hillary clinton  email server  ranking democrat relevant committee  hear comey  found via tweet one republican committee chairman  know  comey notified republican chairman democratic ranking member house intelligence  judiciary  oversight committee agency reviewing email recently discovered order see contained classified information  long letter went  oversight committee chairman jason chaffetz set political world ablaze tweet  fbi dir informed   fbi learned existence email appear pertinent investigation   case reopened  jason chaffetz   jasoninthehouse  october    course  know case  comey actually saying reviewing email light  unrelated case  which know anthony weiner  sexting teenager  apparently little thing fact  matter chaffetz  utah republican already vowed initiate raft investigation hillary winsat least two year  worth  possibly entire term  worth  apparently chaffetz thought fbi already work himresulting tweet briefly roiled nation cooler head realized dud  according senior house democratic aide  misreading letter may least chaffetz  sin  aide told shareblue bos democrat  even know comey  letter timeand found checked twitter   democratic ranking member relevant committee  receive comey  letter republican chairman  fact  democratic ranking member  receive chairman oversight government reform committee  jason chaffetz  tweeted made public  let  see  got right  fbi director tell chaffetz gop committee chairman major development potentially politically explosive investigation  neither chaffetz colleague courtesy let democratic counterpart know  instead  according aide  made find twitter  already talk daily ko comey provided advance notice letter chaffetz republican  giving time turn spin machine  may make good theater  nothing far even suggests case   nothing far suggests comey anything grossly incompetent tonedeaf  suggest  however  chaffetz acting way make dan burton darrell issa look like model responsibility bipartisanship   even decency notify ranking member elijah cummings something explosive   trample basic standard fairness   know  granted   likely chaffetz answer  sits ridiculously republican district anchored provo orem  cook partisan voting index r  gave mitt romney punishing  percent vote   moreover  republican house leadership given full support chaffetz  planned fishing expedition   mean  turn hot light   textbook example house become republican control  also second worst person world  darrell lucus darrell something graduate university north carolina considers journalist old school  attempt turn member religious right college succeeded turning religious right s worst nightmare  charismatic christian unapologetic liberal  desire stand scared silence increased survived abusive threeyear marriage  may know daily ko christian dem nc  follow twitter  darrelllucus connect facebook  click buy darrell mello yello  connect'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 188
+          "execution_count": 46
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DiPxtsreP9AM",
+        "outputId": "c886726b-cd9e-458d-bd22-038880b459bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "df_train[\"title\"][0]"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'house dem aide   even see comey  letter jason chaffetz tweeted'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "20zNb-90VK0v"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
